# project-lost

./: .gitignore  CHANGELOG.md  CHANGELOG.md.backup  CMakeLists.txt  README.md  main.c
libs/heightmap/: height_map.c  height_map.h
logos/: CONTINUE.logo  ERROR.logo  LOST.logo  NEWGAME.logo  PAUSE.logo  QUIT.logo  SAVE.logo  SETTINGS.logo
logos/CONTINUE/: CONTINUE  CONTINUETOOGLED.logo
logos/LOST/: LOST.logo
logos/NEWGAME/: NEWGAME.logo  NEWGAMETOOGLED.logo
logos/QUIT/: QUIT.logo  QUITTOOGLED.logo
logos/SAVE/: SAVE.logo  SAVETOOGLED.logo
src/: battle_mode.c  battle_mode.h  core.c  core.h  game.c  game.h  hello_curses.c  hello_curses.h  menu.c  menu.h  walk_mode.c  walk_mode.h
